<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeFragment">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_sheet" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_danger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/overpass_bold"
            android:minHeight="48dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/determinateBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="0"
            android:indeterminate="false"
            android:max="100"
            android:padding="5dp"
            android:background="@color/danger_yellow"
            android:progressDrawable="@drawable/progress_bar_clip"
            app:layout_constraintTop_toBottomOf="@+id/spinner_danger" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="260dp"
            android:layout_height="400dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bg_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/card_back"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_front"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:paddingVertical="20dp"
                    android:paddingEnd="60dp"
                    android:src="@drawable/walker"
                    tools:ignore="ContentDescription,RtlSymmetry" />

                <TextView
                    android:id="@+id/card_zombie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:fontFamily="@font/overpass_black"
                    android:paddingVertical="5dp"
                    android:paddingStart="20dp"
                    android:text="@string/abomination"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/card_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/card_number"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:paddingEnd="10dp"
                    app:layout_constraintTop_toTopOf="@+id/card_zombie"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/zombie_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/zombie_count_bg"
                    android:fontFamily="@font/overpass_mono_bold"
                    android:paddingHorizontal="16dp"
                    android:text="@string/amount"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/card_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overpass_bold"
                    android:paddingVertical="10dp"
                    android:text="@string/spawn_then_activate"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/buttons_layout_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/abomination_buttons_layout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/previous_card_button"
                style="@style/stripedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous_card"
                android:layout_margin="10dp"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_card_button"
                style="@style/stripedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/draw_a_card"
                android:layout_margin="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abomination_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/abomination_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overpass_bold"
            android:text="@string/abomination"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/buttons_layout_line_2" />

        <LinearLayout
            android:id="@+id/buttons_layout_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/see_abomination_button"
                style="@style/stripedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/see"
                android:layout_margin="10dp"
                android:enabled="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/draw_abomination_button"
                style="@style/stripedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/draw"
                android:enabled="false"
                android:layout_margin="10dp" />

        </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>